src/assets/styles/layouts/services.module.css
.container {
  position: relative;
  max-width: 200rem;
  display: flex;
  background-image: url("/images/frame-2.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  margin: -5rem auto 0 auto;
}

.titleBox {
  margin: 12rem auto 16rem auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding: 0 2rem;
}

.titleBox p {
  font-size: 2rem;
  text-align: center;
  margin-bottom: 2rem;
  font-weight: 500;
  line-height: 1.4;
}

.iconBox {
  position: absolute;
}
.iconBox svg {
  width: 10rem;
  height: 10rem;
}

.content {
  max-width: 200rem;
  margin: -12rem auto 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  padding: 0 0 10rem 0;
  background-image: var(--bg-img);
  background-repeat: no-repeat;
  background-color: var(--blue-light);
  background-position: 40% 60%;
  overflow: hidden;
}

.slider {
  position: relative;
  height: 40rem;

  cursor: grab;
}

.dragging {
  cursor: grabbing;
  -webkit-user-select: none; /* iOS */
  user-select: none;
}
.locking {
  /* Durante el drag bloqueamos cualquier pan del navegador */
  touch-action: none;
}

.item {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%); /* el JS añade el resto */
  transform-origin: center center;
  transition: transform 220ms ease;
  will-change: transform;
}

.controls {
  margin-top: 1.5rem;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

@media (min-width: 768px) {
  .container {
    background-size: contain;
    background-repeat: repeat-x;
    background-position: center;
    margin: -5rem auto 0 auto;
  }
}

